[gd_scene load_steps=4 format=3 uid="uid://gosa0js3qyto"]

[ext_resource type="Texture2D" uid="uid://cbeg1ndm51v8x" path="res://icon.svg" id="1_4flbx"]
[ext_resource type="Script" path="res://player.gd" id="1_onrkg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
radius = 36.0
height = 114.0

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(0.585938, 0.90625)
texture = ExtResource("1_4flbx")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="DashCooldownTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ShootCooldownTimer" type="Timer" parent="."]
wait_time = 2.612
autostart = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="ShootCooldownTimer" to="." method="_on_shoot_cooldown_timer_timeout"]
